# linxira-chwd-detector

./: Cargo.toml  README.md  UPSTREAM.md
.github/workflows/: ci.yml
src/: collect.rs  lib.rs  main.rs  matching.rs
tests/: detection.rs
tests/fixtures/: amd.json  hybrid.json  intel.json  malformed-evidence.json  malformed-input.json  nvidia.json  vm.json
