[package]
name = "linxira-chwd-detector"
version = "0.1.0"
authors = [
    "Vladislav Nepogodin <nepogodin.vlad@gmail.com>",
    "Linxira contributors",
]
license = "GPL-3.0-only"
edition = "2024"
rust-version = "1.85"
description = "Read-only PCI, DMI, CPU, and VM profile detector derived from CHWD"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
